# Speechscribe

./: .env  app.py  audio.py  call_llm.py  current_page.html  download.py  gunicorn.conf.py  main.py  pyproject.toml  replit.nix  requirements.txt  youtube.py
attached_assets/: Pasted-from-future-import-unicode-literals-import-yt-dlp-as-youtube-dl-import-os-import-time-import-1744056822094.txt  Pasted-import-streamlit-as-st-from-groq-import-Groq-import-json-import-os-from-io-import-BytesIO-from--1744056801998.txt
static/css/: style.css
static/js/: script.js  script.js.bak  script.js.bak2  script.js.broken  script.js.full
templates/: index.html
